--- a/f9ec04ed48302a5b02b1ece3ff44d625.css
+++ b/f9ec04ed48302a5b02b1ece3ff44d625.css
@@ -1,1 +1,1 @@
-body{margin:0;background-image:linear-gradient(#f5eee4,#d7cdc1)}*,body{overflow:hidden}
+body{margin:0;background-image:linear-gradient(#f5eee4,#d7cdc1);position:fixed;height:100%;width:100%}*,body{overflow:hidden}
